--- a/lang/en.json
+++ b/lang/en.json
@@ -1,16 +1,35 @@
 {
   "config": {
-    "configHeader":"Config",
-    "configDesc":"(You must press 'Save & Restart' for some changes to take effect)",
-    "extremeGames":"Extreme Games",
-    "extremeGamesDesc":"Show games with sexual, violent or other content unsuitable for children.",
-    "enableEditing":"Enable Editing",
-    "enableEditingDesc":"Enable editing of games, additional applications and playlists. Also shows the 'Curate' tab.",
-    "flashpointPath":"Flashpoint Path"
+    "configHeader": "Config",
+    "configDesc": "(You must press 'Save & Restart' for some changes to take effect)",
+    "preferencesHeader": "Preferences",
+    "extremeGames": "Extreme Games",
+    "extremeGamesDesc": "Show games with sexual, violent or other content unsuitable for children.",
+    "enableEditing": "Enable Editing",
+    "enableEditingDesc": "Enable editing of games, additional applications and playlists. Also shows the 'Curate' tab.",
+    "flashpointHeader": "Flashpoint",
+    "flashpointPath": "Flashpoint Path",
+    "flashpointPathDesc": "Path to the Flashpoint folder (can be relative)",
+    "browse": "Browse",
+    "redirector": "Redirector",
+    "redirectorFiddler": "Fiddler",
+    "redirectorDesc": "Which software to use for redirecting the game traffic to the local web server. Neither is used on Linux.",
+    "useWine": "Use Wine",
+    "useWineDesc": "Launch applications with Wine. Only enable this if Wine is installed.",
+    "visualsHeader": "Visuals",
+    "useCustomTitleBar": "Use Custom Title Bar",
+    "useCustomTitleBarDesc": "Use a custom title bar at the top of this window.",
+    "theme": "Theme",
+    "noTheme": "No Theme",
+    "themeDesc": "File path of the theme to use (relative to the themes folder).",
+    "advancedHeader": "Advanced",
+    "showDeveloperTab": "Show Developer Tab",
+    "showDeveloperTabDesc": "Show the 'Developer' tab. This is most likely only useful for developers and curators.",
+    "saveAndRestart": "Save and Restart"
   },
   "home": {
-    "quickStartHeader":"Quick Start",
-    "hallOfFameInfo":"Only want the best of the best? Check out the {0}!",
-    "hallOfFame":"Hall of Fame"
+    "quickStartHeader": "Quick Start",
+    "hallOfFameInfo": "Only want the best of the best? Check out the {0}!",
+    "hallOfFame": "Hall of Fame"
   }
 }
