Localization Support - Config page selection

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,4 +1,5 @@
 {
+  "name": "English",
   "config": {
     "configHeader": "Config",
     "configDesc": "(You must press 'Save & Restart' for some changes to take effect)",
