--- a/lang/en.json
+++ b/lang/en.json
@@ -8,6 +8,12 @@
     "extremeGamesDesc": "Show games with sexual, violent or other content unsuitable for children.",
     "enableEditing": "Enable Editing",
     "enableEditingDesc": "Enable editing of games, additional applications and playlists. Also shows the 'Curate' tab.",
+    "currentLanguage": "Current Language",
+    "currentLanguageDesc": "Which language the launcher will use primarily.",
+    "fallbackLanguage": "Fallback Language",
+    "fallbackLanguageDesc": "Which language to use in place of an incomplete current language.",
+    "auto": "Auto ({0})",
+    "none": "None",
     "flashpointHeader": "Flashpoint",
     "flashpointPath": "Flashpoint Path",
     "flashpointPathDesc": "Path to the Flashpoint folder (can be relative)",
@@ -31,6 +37,229 @@
   "home": {
     "quickStartHeader": "Quick Start",
     "hallOfFameInfo": "Only want the best of the best? Check out the {0}!",
-    "hallOfFame": "Hall of Fame"
+    "hallOfFame": "Hall of Fame",
+    "allGamesInfo": "Looking for something to play? View {0}.",
+    "allGames": "All Games",
+    "allAnimationsInfo": "Just want something to watch? View {0}.",
+    "allAnimations": "All Animations",
+    "configInfo": "Want to change something? Go to {0}.",
+    "config": "Config",
+    "helpInfo": "Need help? {0}.",
+    "help": "Read the readme",
+    "upgradesHeader": "Upgrades",
+    "installComplete": "Install Complete",
+    "alreadyInstalled": "Already Installed",
+    "download": "Download",
+    "extrasHeader": "Extras",
+    "favoritesPlaylist": "Favorites Playlist",
+    "genreList": "Genre List",
+    "filterByPlatform": "Filter by platform",
+    "plannedFeatures": "Check out our planned features!",
+    "notesHeader": "Notes",
+    "notes": "Don't forget to read the readme if you're having issues.",
+    "randomPicks": "Random Picks"
+  },
+  "logs": {
+    "filters": "Filters",
+    "copyText": "Copy Text",
+    "clearLog": "Clear Log"
+  },
+  "app": {
+    "home": "Home",
+    "browse": "Browse",
+    "logs": "Logs",
+    "config": "Config",
+    "about": "About",
+    "curate": "Curate",
+    "developer": "Developer",
+    "searchPlaceholder": "Search...",
+    "hideRightSidebar": "Hide right sidebar",
+    "showRightSidebar": "Show right sidebar",
+    "hideLeftSidebar": "Hide left sidebar",
+    "showLeftSidebar": "Show left sidebar",
+    "total": "Total",
+    "newGame": "New Game",
+    "list": "List",
+    "grid": "Grid"
+  },
+  "filter": {
+    "dateAdded": "Date Added",
+    "genre": "Genre",
+    "platform": "Platform",
+    "series": "Series",
+    "title": "Title",
+    "ascending": "Ascending",
+    "descending": "Descending"
+  },
+  "developer": {
+    "developerHeader": "Developer",
+    "developerDesc": "This is where all the useful developer tools will go.",
+    "checkMissingImages": "Check Missing Images",
+    "checkMissingImagesDesc": "List all games without a thumbnail or screenshot",
+    "checkGameIds": "Check Game IDs",
+    "checkGameIdsDesc": "List all games with duplicate or invalid IDs",
+    "checkGameTitles": "Check Game Titles",
+    "checkGameTitlesDesc": "List all games with duplicate titles on the same platform",
+    "checkGameFields": "Check Game Fields",
+    "checkGameFieldsDesc": "List all games with empty fields (of the fields that should not be empty)",
+    "checkPlaylists": "Check Playlists",
+    "checkPlaylistsDesc": "List all playlists with duplicate or invalid IDs, or that has game entries with missing, invalid or duplicate IDs",
+    "checkGameFileLocation": "Check Game File Location",
+    "checkGameFileLocationDesc": "List all games with launch commands that can not be parsed into file paths (this is related to the 'Open File Location' function, not launching the game)",
+    "renameImagesTitleToId": "Rename Images (Title => ID)",
+    "renameImagesTitleToIdDesc": "Find all game images with the games title in their filename and rename them to use its ID instead",
+    "renameImagesIdToTitle": "Rename Images (ID => Title)",
+    "renameImagesIdToTitleDesc": "Find all game images with the games ID in their filename and rename them to use its title instead",
+    "createMissingFolders": "Create Missing Folders",
+    "createMissingFoldersDesc": "Find all missing folders in the Flashpoint folder structure and create them"
+  },
+  "about": {
+    "aboutHeader": "About",
+    "flashpoint": "BlueMaxima's Flashpoint",
+    "flashpointDesc": "The preservation project this launcher was built for, that aims to be an archive, museum and playable collection of web-based Internet games.",
+    "website": "Website",
+    "flashpointLauncher": "Flashpoint Launcher",
+    "flashpointLauncherDesc": "An open-source desktop application used to browse, manage and play games from the Flashpoint project.",
+    "version": "Version",
+    "license": "License",
+    "licenseInfo": "MIT (Read the file named 'LICENSE' for more information)",
+    "creditsHeader": "Credits"
+  },
+  "browse": {
+    "noTitle": "No Title",
+    "by": "by",
+    "noDeveloper": "No Developer",
+    "genre": "Genre",
+    "noGenre": "No Genre",
+    "series": "Series",
+    "noSeries": "No Series",
+    "publisher": "Publisher",
+    "noPublisher": "No Publisher",
+    "source": "Source",
+    "noSource": "No Source",
+    "platform": "Platform",
+    "noPlatform": "No Platform",
+    "playMode": "Play Mode",
+    "noPlayMode": "No Play Mode",
+    "status": "Status",
+    "noStatus": "No Status",
+    "version": "Version",
+    "noVersion": "No Version",
+    "releaseDate": "Release Date",
+    "noReleaseDate": "No Release Date",
+    "language": "Language",
+    "noLanguage": "No Language",
+    "dateAdded": "Date Added",
+    "brokenInInfinity": "Broken (in Infinity)",
+    "extreme": "Extreme",
+    "playlistNotes": "Playlist Notes",
+    "noPlaylistNotes": "No Playlist Notes",
+    "notes": "Notes",
+    "noNotes": "No Notes",
+    "originalDescription": "Original Description",
+    "noOriginalDescription": "No Original Description",
+    "additionalApplications": "Additional Application",
+    "noName": "No Name",
+    "launch": "Launch",
+    "commandLine": "Command Line",
+    "noCommandLine": "No Command Line",
+    "autoRunBefore": "Auto Run Before",
+    "waitForExit": "Wait for Exit",
+    "applicationPath": "Application Path",
+    "noApplicationPath": "No Application Path",
+    "launchCommand": "Launch Command",
+    "noLaunchCommand": "No Launch Command",
+    "thumbnail": "Thumbnail",
+    "screenshot": "Screenshot",
+    "dropImageHere": "Drop an image here to add it",
+    "noGameSelected": "No Game Selected",
+    "clickToSelectGame": "Click on a game to select it.",
+    "failedToLoadPlaylistFolder": "Failed to load playlist folder",
+    "checkLogForInfo": "Check the log for more information.",
+    "loadingPlaylists": "Loading Playlists...",
+    "deleteAdditionalApplication": "Delete Additional Application",
+    "deleteGameAndAdditionalApps": "Delete Game (and Additional Applications)",
+    "removeGameFromPlaylist" : "Remove Game from Playlist",
+    "saveChanges": "Save Changes",
+    "discardChanges": "Discard Changes",
+    "editGame": "Edit Game",
+    "allGames": "All Games",
+    "newPlaylist": "New Playlist",
+    "emptyPlaylist": "Empty Playlist",
+    "noGamesFound": "No Games Found!",
+    "dropGameOnLeft": "Drop a game on this playlist in the <i>left sidebar</i> to add it.",
+    "setFlashpointPathQuestion" : "Have you set the path to the <b>Flashpoint path</b> at the <i>Config</i> page?",
+    "noteSaveAndRestart": "Note: You have to press <b>'Save & Restart'</b> for the change to take effect.",
+    "loadingGames": "Loading Games...",
+    "thereAreNoGames": "There are no games."
+  },
+  "curate": {
+    "importAll": "Import All",
+    "importAllDesc": "Import all curations that are currently loaded",
+    "loadMeta": "Load Meta",
+    "loadMetaDesc": "Load one or more Curation meta files",
+    "loadArchive": "Load Archive",
+    "loadArchiveDesc": "Load one or more Curation archives",
+    "loadFolder": "Load Folder",
+    "loadFolderDesc": "Load one or more Curation folders",
+    "heading": "Heading",
+    "noHeading": "No Heading",
+    "curationNotes": "Curation Notes",
+    "noCurationNotes": "No Curation Notes",
+    "remove": "Remove",
+    "removeDesc": "LOCALIZATION REQUIRED HERE",
+    "removeCurationDesc": "LOCALIZATION REQUIRED HERE",
+    "import": "Import",
+    "contentFiles": "Content Files",
+    "warnings": "Warnings"
+  },
+  "playlist": {
+    "enterDescriptionHere": "Enter a description here...",
+    "noDescription": "No Description",
+    "save": "Save",
+    "saveDesc": "Save changes made and stop editing",
+    "discard": "Discard",
+    "discardDesc": "Discard changes made and stop editing",
+    "delete": "Delete",
+    "deleteDesc": "Delete this playlist",
+    "areYouSure": "Are you sure?",
+    "noTitle": "No Title",
+    "titlePlaceholder": "Title...",
+    "noAuthor": "No Author",
+    "authorPlaceholder": "Author..."
+  },
+  "misc": {
+    "blankNotFound": "{0} Not Found",
+    "addBlank": "Add {0}",
+    "removeBlank": "Remove {0}",
+    "deleteAllBlankImages": "Delete ALL {0} images for this game",
+    "yes": "Yes",
+    "no": "No"
+  },
+  "menu": {
+    "viewThumbnailInFolder": "View Thumbnail in Folder",
+    "viewScreenshotInFolder": "View Screenshot in Folder",
+    "openFileLocation": "Open File Location",
+    "duplicateMetaOnly": "Duplicate (Meta Only)",
+    "duplicateMetaAndImages": "Duplicate (Meta && Images)",
+    "exportMetaOnly": "Export (Meta Only)",
+    "exportMetaAndImages": "Export (Meta && Images)"
+  },
+  "dialog": {
+    "programNotFound": "Program not found!",
+    "phpNotFound": "",
+    "wineNotFound": "",
+    "fileNotFound": "File not found!",
+    "pathNotFound": "Path not found!",
+    "selectFileToExportMeta" : "Select file to save meta to",
+    "selectFolderToExportMetaAndImages": "Select folder to save meta and images to",
+    "replaceFilesQuestion": "Replace files?",
+    "exportedAlreadyExistsYesNo": "One or more of the exported files already exists.\n Do you want to replace them?",
+    "selectScreenshot": "Select Screenshot",
+    "selectThumbnail": "Select Thumbnail",
+    "selectThemeFile": "Select Theme File",
+    "selectCurationFolder": "Select Curation Folder(s)",
+    "selectCurationArchive": "Select Curation Archive(s)",
+    "selectCurationMeta": "Select Curation Meta(s)"
   }
 }
