--- a/lang/en.json
+++ b/lang/en.json
@@ -8,7 +8,7 @@
     "extremeGamesDesc": "Show games with sexual, violent or other content unsuitable for children.",
     "enableEditing": "Enable Editing",
     "enableEditingDesc": "Enable editing of games, additional applications and playlists. Also shows the 'Curate' tab.",
-    "currentLanguage": "Current Language",
+    "currentLanguage": "Language",
     "currentLanguageDesc": "Which language the launcher will use primarily.",
     "fallbackLanguage": "Fallback Language",
     "fallbackLanguageDesc": "Which language to use in place of an incomplete current language.",
