feat: Service Api improvements, utils for future renderer services

--- a/lang/en.json
+++ b/lang/en.json
@@ -118,6 +118,7 @@
     "running": "Running",
     "stopped": "Stopped",
     "killing": "Killing",
+    "failed": "Failed",
     "start": "Start",
     "startDesc": "Start the service",
     "stop": "Stop",
