--- a/lang/pt.json
+++ b/lang/pt.json
@@ -118,6 +118,7 @@
     "running": "Em execução",
     "stopped": "Parou",
     "killing": "Encerrando",
+    "failed": "Insucesso",
     "start": "Começar",
     "startDesc": "Começar o serviço",
     "stop": "Parar",
