feat: Developer and Publisher order opts

--- a/lang/en.json
+++ b/lang/en.json
@@ -90,6 +90,8 @@
     "platform": "Platform",
     "series": "Series",
     "title": "Title",
+    "developer": "Developer",
+    "publisher": "Publisher",
     "ascending": "Ascending",
     "descending": "Descending"
   },
