feat: Native exec mapping and locking (multiplatform)

--- a/lang/en.json
+++ b/lang/en.json
@@ -23,6 +23,9 @@
     "redirectorDesc": "Which software to use for redirecting the game traffic to the local web server. Neither is used on Linux.",
     "useWine": "Use Wine",
     "useWineDesc": "Launch applications with Wine. Only enable this if Wine is installed.",
+    "platforms": "Platforms",
+    "nativeLocks": "Native Locks",
+    "nativeLocksDesc": "Platforms to force use of native applications (if available) regardless of Use Wine choice.",
     "visualsHeader": "Visuals",
     "useCustomTitleBar": "Use Custom Title Bar",
     "useCustomTitleBarDesc": "Use a custom title bar at the top of this window.",
@@ -108,6 +111,8 @@
     "checkPlaylistsDesc": "List all playlists with duplicate or invalid IDs, or that has game entries with missing, invalid or duplicate IDs",
     "checkGameFileLocation": "Check Game File Location",
     "checkGameFileLocationDesc": "List all games with launch commands that can not be parsed into file paths (this is related to the 'Open File Location' function, not launching the game)",
+    "checkMissingExecMappings": "Check Missing Exec Mappings",
+    "checkMissingExecMappingsDesc": "List all unique execs for win32, linux and darwin which are missing an exec mapping",
     "renameImagesTitleToId": "Rename Images (Title => ID)",
     "renameImagesTitleToIdDesc": "Find all game images with the games title in their filename and rename them to use its ID instead",
     "renameImagesIdToTitle": "Rename Images (ID => Title)",
