feat: Better Linux Escaping

--- a/lang/en.json
+++ b/lang/en.json
@@ -24,8 +24,8 @@
     "useWine": "Use Wine",
     "useWineDesc": "Launch applications with Wine. Only enable this if Wine is installed.",
     "platforms": "Platforms",
-    "nativeLocks": "Native Locks",
-    "nativeLocksDesc": "Platforms to force use of native applications (if available) regardless of Use Wine choice.",
+    "nativePlatforms": "Native Platforms",
+    "nativePlatformsDesc": "Platforms to force use of native applications (if available) in any circumstance",
     "visualsHeader": "Visuals",
     "useCustomTitleBar": "Use Custom Title Bar",
     "useCustomTitleBarDesc": "Use a custom title bar at the top of this window.",
