--- a/lang/en.json
+++ b/lang/en.json
@@ -206,6 +206,8 @@
   "curate": {
     "importAll": "Import All",
     "importAllDesc": "Import all curations that are currently loaded",
+    "newCuration": "New Curation",
+    "newCurationDesc": "Creates a new curation with a unique folder",
     "loadMeta": "Load Meta",
     "loadMetaDesc": "Load one or more Curation meta files",
     "loadArchive": "Load Archive",
@@ -218,7 +220,9 @@
     "noCurationNotes": "No Curation Notes",
     "remove": "Remove",
     "removeCurationDesc": "Remove this curation (no changes will be made to any files)",
+    "openFolder": "Open Folder",
     "run": "Run",
+    "export": "Export",
     "import": "Import",
     "contentFiles": "Content Files",
     "warnings": "Warnings",
