refactor: change the text that appears in GameImageSplit
Revert back to the text that was displayed in GameImageSplit before the
customizable language feature was implemented (minor change).

--- a/lang/en.json
+++ b/lang/en.json
@@ -247,9 +247,8 @@
     "authorPlaceholder": "Author..."
   },
   "misc": {
-    "blankNotFound": "{0} Not Found",
+    "noBlankFound": "No {0} Found",
     "addBlank": "Add {0}",
-    "removeBlank": "Remove {0}",
     "deleteAllBlankImages": "Delete ALL {0} images for this game",
     "yes": "Yes",
     "no": "No"
