feat: Polish to Curate

--- a/lang/en.json
+++ b/lang/en.json
@@ -162,7 +162,7 @@
     "noNotes": "No Notes",
     "originalDescription": "Original Description",
     "noOriginalDescription": "No Original Description",
-    "additionalApplications": "Additional Application",
+    "additionalApplications": "Additional Applications",
     "noName": "No Name",
     "launch": "Launch",
     "commandLine": "Command Line",
@@ -218,6 +218,8 @@
     "noHeading": "No Heading",
     "curationNotes": "Curation Notes",
     "noCurationNotes": "No Curation Notes",
+    "newAddApp": "New App",
+    "removeAddApp": "Remove App",
     "indexContent": "Update Content",
     "remove": "Remove",
     "removeCurationDesc": "Remove this curation (no changes will be made to any files)",
