refactor: Lots of curation stuff

--- a/lang/en.json
+++ b/lang/en.json
@@ -220,7 +220,7 @@
     "noCurationNotes": "No Curation Notes",
     "newAddApp": "New App",
     "removeAddApp": "Remove App",
-    "indexContent": "Update Content",
+    "indexContent": "Refresh Content",
     "remove": "Remove",
     "removeCurationDesc": "Remove this curation (no changes will be made to any files)",
     "openFolder": "Open Folder",
