feat: display a message if there are no services (at the developer page)
Display a message where the ServiceBoxes normally are if there are no
services.

--- a/lang/en.json
+++ b/lang/en.json
@@ -117,6 +117,7 @@
     "createMissingFolders": "Create Missing Folders",
     "createMissingFoldersDesc": "Find all missing folders in the Flashpoint folder structure and create them",
     "servicesHeader": "Background Services",
+    "servicesMissing": "There are no services.",
     "running": "Running",
     "stopped": "Stopped",
     "killing": "Killing",
