feat: CurateBox formatting and Tags switchover

--- a/lang/en.json
+++ b/lang/en.json
@@ -52,7 +52,7 @@
     "download": "Download",
     "extrasHeader": "Extras",
     "favoritesPlaylist": "Favorites Playlist",
-    "genreList": "Genre List",
+    "tagList": "Tag List",
     "filterByPlatform": "Filter by platform",
     "plannedFeatures": "Check out our planned features!",
     "notesHeader": "Notes",
@@ -86,7 +86,7 @@
   },
   "filter": {
     "dateAdded": "Date Added",
-    "genre": "Genre",
+    "tags": "Tags",
     "platform": "Platform",
     "series": "Series",
     "title": "Title",
@@ -146,8 +146,8 @@
     "noTitle": "No Title",
     "by": "by",
     "noDeveloper": "No Developer",
-    "genre": "Genre",
-    "noGenre": "No Genre",
+    "tags": "Tags",
+    "noTags": "No Tags",
     "series": "Series",
     "noSeries": "No Series",
     "publisher": "Publisher",
@@ -252,7 +252,7 @@
     "isNotHttp": "'Launch Command' is not a URL using the HTTP protocol.",
     "releaseDateInvalid": "'Release Date' must follow YYYY-MM-DD (month and day are optional).",
     "unusedApplicationPath": "'Application Path' has an unused value. Make sure it's spelled correctly!",
-    "unusedGenre": "'Genre' has an unused value. Make sure it's spelled correctly!",
+    "unusedTags": "One or more 'Tags' are not used by another game. Make sure they're spelled correctly!",
     "unusedPlatform": "'Platform' has an unused value. Make sure it's spelled correctly!",
     "nonExistingLibrary": "'Library' is not the name of an existing library! (Default will be used)",
     "noContent": "No content found! Make sure the folder is named and placed correctly!"
