feat: Launch Command Validation + Tweaks

--- a/lang/en.json
+++ b/lang/en.json
@@ -221,9 +221,9 @@
   "curate": {
     "importAll": "Import All",
     "importAllDesc": "Import all curations that are currently loaded",
-    "removeAll": "Remove All",
-    "removeAllDesc": "Remove all curations that are currently loaded",
-    "openCurationsFolder": "Open Folder",
+    "deleteAll": "Delete All",
+    "deleteAllDesc": "Delete all curations that are currently loaded",
+    "openCurationsFolder": "Curation Folders",
     "openCurationsFolderDesc": "Open the Curations folder in explorer",
     "newCuration": "New Curation",
     "newCurationDesc": "Creates a new curation with a unique folder",
@@ -234,6 +234,7 @@
     "loadFolder": "Load Folder",
     "loadFolderDesc": "Load one or more Curation folders",
     "noCurations": "No Curations",
+    "id": "Curation Folder",
     "heading": "Heading",
     "noHeading": "No Heading",
     "curationNotes": "Curation Notes",
@@ -241,18 +242,19 @@
     "newAddApp": "New App",
     "removeAddApp": "Remove App",
     "indexContent": "Refresh Content",
-    "remove": "Remove",
-    "removeCurationDesc": "Remove this curation (no changes will be made to any files)",
+    "delete": "Delete",
+    "deleteCurationDesc": "Delete this curation (Files can not be recovered)",
     "openFolder": "Open Folder",
     "run": "Run",
     "export": "Export",
     "import": "Import",
     "contentFiles": "Content Files",
     "warnings": "Warnings",
-    "isNotHttp": "'Launch Command' is not a URL using the HTTP protocol.",
+    "noLaunchCommand": "'Launch Command' is a required field. Please fill it in before importing.",
+    "invalidLaunchCommand": "'Launch Command' must fit these requirements:\n\tBe a valid URL.\n\tUse HTTP. Never use HTTPS.\n\tResolve to a file inside this curation's 'content' folder",
     "releaseDateInvalid": "'Release Date' must follow YYYY-MM-DD (month and day are optional).",
     "unusedApplicationPath": "'Application Path' has an unused value. Make sure it's spelled correctly!",
-    "unusedTags": "One or more 'Tags' are not used by another game. Make sure they're spelled correctly!",
+    "unusedTags": "The following tags are not present on any other game. Are they correct?",
     "unusedPlatform": "'Platform' has an unused value. Make sure it's spelled correctly!",
     "nonExistingLibrary": "'Library' is not the name of an existing library! (Default will be used)",
     "noContent": "No content found! Make sure the folder is named and placed correctly!"
