--- a/lang/en.json
+++ b/lang/en.json
@@ -146,6 +146,8 @@
     "noTitle": "No Title",
     "by": "by",
     "noDeveloper": "No Developer",
+    "alternateTitles": "Alternate Titles",
+    "noAlternateTitles": "No Alternate Titles",
     "tags": "Tags",
     "noTags": "No Tags",
     "series": "Series",
@@ -235,9 +237,15 @@
     "id": "Curation Folder",
     "heading": "Heading",
     "noHeading": "No Heading",
+    "folderName": "Extras Folder",
+    "noFolderName": "No Folder Name",
+    "message": "Launch Message",
+    "noMessage": "No Message",
     "curationNotes": "Curation Notes",
     "noCurationNotes": "No Curation Notes",
     "newAddApp": "New App",
+    "addExtras": "Add Extras",
+    "addMessage": "Add Message",
     "removeAddApp": "Remove App",
     "indexContent": "Refresh Content",
     "delete": "Delete",
@@ -255,7 +263,8 @@
     "unusedTags": "The following tags are not present on any other game. Are they correct?",
     "unusedPlatform": "'Platform' has an unused value. Make sure it's spelled correctly!",
     "nonExistingLibrary": "'Library' is not the name of an existing library! (Default will be used)",
-    "noContent": "No content found! Make sure the folder is named and placed correctly!"
+    "noContent": "No content found! Make sure the folder is named and placed correctly!",
+    "nonContentFolders": "Non-Content folders found in Curation folder. Are they supposed to be there?"
   },
   "playlist": {
     "enterDescriptionHere": "Enter a description here...",
