--- a/lang/en.json
+++ b/lang/en.json
@@ -223,7 +223,7 @@
     "importAllDesc": "Import all curations that are currently loaded",
     "deleteAll": "Delete All",
     "deleteAllDesc": "Delete all curations that are currently loaded",
-    "openCurationsFolder": "Curation Folders",
+    "openCurationsFolder": "Curations Folder",
     "openCurationsFolderDesc": "Open the Curations folder in explorer",
     "openExportsFolder": "Exports Folder",
     "openExportsFolderDesc": "Open the default Exports folder containing your exported curations.",
@@ -265,7 +265,6 @@
     "unusedTags": "The following tags are not present on any other game. Are they correct?",
     "unusedPlatform": "'Platform' has an unused value. Make sure it's spelled correctly!",
     "nonExistingLibrary": "'Library' is not the name of an existing library! (Default will be used)",
-    "noContent": "No content found! Make sure the folder is named and placed correctly!",
     "nonContentFolders": "Non-Content folders found in Curation folder. Are they supposed to be there?"
   },
   "playlist": {
