feat: Saving imports, warning and color changes

--- a/lang/en.json
+++ b/lang/en.json
@@ -223,10 +223,13 @@
     "importAllDesc": "Import all curations that are currently loaded",
     "deleteAll": "Delete All",
     "deleteAllDesc": "Delete all curations that are currently loaded",
+    "saveImportedCurations": "Save Imported Curations",
     "openCurationsFolder": "Curations Folder",
     "openCurationsFolderDesc": "Open the Curations folder in explorer",
     "openExportsFolder": "Exports Folder",
     "openExportsFolderDesc": "Open the default Exports folder containing your exported curations.",
+    "openImportedFolder": "Imported Curations",
+    "openImportedFolderDesc": "Open the default Imported curations folder containing your imported curations.",
     "newCuration": "New Curation",
     "newCurationDesc": "Creates a new curation with a unique folder",
     "loadMeta": "Load Meta",
