--- a/lang/en.json
+++ b/lang/en.json
@@ -21,8 +21,9 @@
     "redirector": "Redirector",
     "redirectorFiddler": "Fiddler",
     "redirectorDesc": "Which software to use for redirecting the game traffic to the local web server. Neither is used on Linux.",
-    "useWine": "Use Wine",
-    "useWineDesc": "Launch applications with Wine. Only enable this if Wine is installed.",
+    "platforms": "Platforms",
+    "nativePlatforms": "Native Platforms",
+    "nativePlatformsDesc": "Use Native versions of these platforms. (If not available it will use Wine)",
     "visualsHeader": "Visuals",
     "useCustomTitleBar": "Use Custom Title Bar",
     "useCustomTitleBarDesc": "Use a custom title bar at the top of this window.",
@@ -35,6 +36,12 @@
     "saveAndRestart": "Save and Restart"
   },
   "home": {
+    "updateHeader": "Launcher Update",
+    "currentVersion": "Current Version",
+    "nextVersion": "Next Version",
+    "updateAvailable": "Update Available",
+    "upToDate": "Up to date.",
+    "downloadingUpdate": "Downloading Update...",
     "quickStartHeader": "Quick Start",
     "hallOfFameInfo": "Only want the best of the best? Check out the {0}!",
     "hallOfFame": "Hall of Fame",
@@ -50,9 +57,11 @@
     "installComplete": "Install Complete",
     "alreadyInstalled": "Already Installed",
     "download": "Download",
+    "update": "Update",
+    "checkingUpgradeState": "Checking Upgrade State...",
     "extrasHeader": "Extras",
     "favoritesPlaylist": "Favorites Playlist",
-    "genreList": "Genre List",
+    "tagList": "Tag List",
     "filterByPlatform": "Filter by platform",
     "plannedFeatures": "Check out our planned features!",
     "notesHeader": "Notes",
@@ -86,7 +95,7 @@
   },
   "filter": {
     "dateAdded": "Date Added",
-    "genre": "Genre",
+    "tags": "Tags",
     "platform": "Platform",
     "series": "Series",
     "title": "Title",
@@ -110,6 +119,8 @@
     "checkPlaylistsDesc": "List all playlists with duplicate or invalid IDs, or that has game entries with missing, invalid or duplicate IDs",
     "checkGameFileLocation": "Check Game File Location",
     "checkGameFileLocationDesc": "List all games with launch commands that can not be parsed into file paths (this is related to the 'Open File Location' function, not launching the game)",
+    "checkMissingExecMappings": "Check Missing Exec Mappings",
+    "checkMissingExecMappingsDesc": "List all unique execs for win32, linux and darwin which are missing an exec mapping",
     "renameImagesTitleToId": "Rename Images (Title => ID)",
     "renameImagesTitleToIdDesc": "Find all game images with the games title in their filename and rename them to use its ID instead",
     "renameImagesIdToTitle": "Rename Images (ID => Title)",
@@ -146,8 +157,10 @@
     "noTitle": "No Title",
     "by": "by",
     "noDeveloper": "No Developer",
-    "genre": "Genre",
-    "noGenre": "No Genre",
+    "alternateTitles": "Alternate Titles",
+    "noAlternateTitles": "No Alternate Titles",
+    "tags": "Tags",
+    "noTags": "No Tags",
     "series": "Series",
     "noSeries": "No Series",
     "publisher": "Publisher",
@@ -175,7 +188,7 @@
     "noNotes": "No Notes",
     "originalDescription": "Original Description",
     "noOriginalDescription": "No Original Description",
-    "additionalApplications": "Additional Application",
+    "additionalApplications": "Additional Applications",
     "noName": "No Name",
     "launch": "Launch",
     "autoRunBefore": "Auto Run Before",
@@ -219,28 +232,56 @@
   "curate": {
     "importAll": "Import All",
     "importAllDesc": "Import all curations that are currently loaded",
+    "deleteAll": "Delete All",
+    "deleteAllDesc": "Delete all curations that are currently loaded",
+    "saveImportedCurations": "Save Imported Curations",
+    "openCurationsFolder": "Curations Folder",
+    "openCurationsFolderDesc": "Open the Curations folder in explorer",
+    "openExportsFolder": "Exported Curations",
+    "openExportsFolderDesc": "Open the default Exports folder containing your exported curations.",
+    "openImportedFolder": "Imported Curations",
+    "openImportedFolderDesc": "Open the default Imported curations folder containing your imported curations.",
+    "newCuration": "New Curation",
+    "newCurationDesc": "Creates a new curation with a unique folder",
     "loadMeta": "Load Meta",
     "loadMetaDesc": "Load one or more Curation meta files",
     "loadArchive": "Load Archive",
     "loadArchiveDesc": "Load one or more Curation archives",
     "loadFolder": "Load Folder",
     "loadFolderDesc": "Load one or more Curation folders",
+    "noCurations": "No Curations",
+    "id": "Curation Folder",
     "heading": "Heading",
     "noHeading": "No Heading",
+    "folderName": "Extras Folder",
+    "noFolderName": "No Folder Name",
+    "message": "Launch Message",
+    "noMessage": "No Message",
     "curationNotes": "Curation Notes",
     "noCurationNotes": "No Curation Notes",
-    "remove": "Remove",
-    "removeCurationDesc": "Remove this curation (no changes will be made to any files)",
+    "newAddApp": "New App",
+    "addExtras": "Add Extras",
+    "addMessage": "Add Message",
+    "removeAddApp": "Remove App",
+    "indexContent": "Refresh Content",
+    "delete": "Delete",
+    "deleteCurationDesc": "Delete this curation (Files can not be recovered)",
+    "openFolder": "Open Folder",
+    "run": "Run",
+    "export": "Export",
     "import": "Import",
     "contentFiles": "Content Files",
     "warnings": "Warnings",
-    "isNotHttp": "'Launch Command' is not a URL using the HTTP protocol.",
+    "noLaunchCommand": "'Launch Command' is a required field. Please fill it in before importing.",
+    "invalidLaunchCommand": "'Launch Command' does not fit these URL requirements:",
     "releaseDateInvalid": "'Release Date' must follow YYYY-MM-DD (month and day are optional).",
     "unusedApplicationPath": "'Application Path' has an unused value. Make sure it's spelled correctly!",
-    "unusedGenre": "'Genre' has an unused value. Make sure it's spelled correctly!",
+    "unusedTags": "The following tags are not present on any other game. Are they correct?",
     "unusedPlatform": "'Platform' has an unused value. Make sure it's spelled correctly!",
     "nonExistingLibrary": "'Library' is not the name of an existing library! (Default will be used)",
-    "noContent": "No content found! Make sure the folder is named and placed correctly!"
+    "nonContentFolders": "Non-Content folders found in Curation folder. Are they supposed to be there?",
+    "ilc_notHttp": "Use HTTP.",
+    "ilc_nonExistant": "Point to an existing file in your curation's 'content' folder."
   },
   "playlist": {
     "enterDescriptionHere": "Enter a description here...",
@@ -262,7 +303,11 @@
     "addBlank": "Add {0}",
     "deleteAllBlankImages": "Delete ALL {0} images for this game",
     "yes": "Yes",
-    "no": "No"
+    "no": "No",
+    "downloading": "Downloading",
+    "extracting": "Extracting",
+    "installingFiles": "Installing Files...",
+    "complete": "Complete"
   },
   "menu": {
     "viewThumbnailInFolder": "View Thumbnail in Folder",
@@ -276,13 +321,16 @@
   "dialog": {
     "programNotFound": "Program not found!",
     "phpNotFound": "PHP was not found on the path. Is it installed?\nYou may encounter unexpected and broken behaviour without it.",
-    "wineNotFound": "Wine was enabled but not found on the path. Is it installed?\nSome games may not be available without Wine",
+    "wineNotFound": "Wine is not installed, but is required to run this game.\nPlease see the Linux Support wiki article for details.",
+    "flashpointPathNotFound": "The Flashpoint folder is not set or is invalid. Do you want to choose a folder to install to now?",
     "fileNotFound": "File not found!",
+    "flashpointPathInvalid": "Flashpoint path invalid!",
     "pathNotFound": "Path not found!",
     "selectFileToExportMeta": "Select file to save meta to",
     "selectFolderToExportMetaAndImages": "Select folder to save meta and images to",
     "replaceFilesQuestion": "Replace files?",
     "exportedAlreadyExistsYesNo": "One or more of the exported files already exists.\n Do you want to replace them?",
+    "selectFolder": "Select Folder",
     "selectScreenshot": "Select Screenshot",
     "selectThumbnail": "Select Thumbnail",
     "selectThemeFile": "Select Theme File",
@@ -290,10 +338,25 @@
     "selectCurationArchive": "Select Curation Archive(s)",
     "selectCurationMeta": "Select Curation Meta(s)",
     "errorParsingPlatforms": "Error parsing platforms!",
-    "errorParsingPlatformsMessage": "{0} Error(s) raised while parsing platform XMLs\nPlease check the logs for details."
+    "errorParsingPlatformsMessage": "{0} Error(s) raised while parsing platform XMLs\nPlease check the logs for details.",
+    "dataRequired": "Additional Data Required",
+    "dataRequiredDesc": "You must install the Upgrade on the home screen before being able to use the launcher.\n\nDo you wish to do this now?",
+    "upgradeWillInstallTo": "{0} will be installed to",
+    "verifyPathSelection": "Future upgrades will also install here. Is this correct?",
+    "restartNow": "Restart Now?",
+    "restartToApplyUpgrade": "This upgrade will not be applied until you restart.\nDo you wish to do this now?",
+    "areYouSure": "Are you sure?"
   },
   "libraries": {
     "arcade": "Games",
     "theatre": "Animations"
+  },
+  "upgrades": {
+    "infinity": "Flashpoint Infinity",
+    "infinityDesc": "Required files. Adds support for Flash games.",
+    "tech": "Other Technologies",
+    "techDesc": "Adds support for all other tech - Shockwave, Unity, Java, HTML5, etc.",
+    "screenshots": "Logos & Screenshots",
+    "screenshotsDesc": "Adds logos for Grid view and screenshots for all games."
   }
 }
