fix: make the total counter in the footer show the total number of games

--- a/lang/en.json
+++ b/lang/en.json
@@ -82,7 +82,8 @@
     "total": "Total",
     "newGame": "New Game",
     "list": "List",
-    "grid": "Grid"
+    "grid": "Grid",
+    "searchResults": "Search Results"
   },
   "filter": {
     "dateAdded": "Date Added",
