--- a/lang/en.json
+++ b/lang/en.json
@@ -152,7 +152,8 @@
     "version": "Version",
     "license": "License",
     "licenseInfo": "MIT (Read the file named 'LICENSE' for more information)",
-    "creditsHeader": "Credits"
+    "creditsHeader": "Credits",
+    "specialThanks": "Special Thanks"
   },
   "browse": {
     "noTitle": "No Title",
